# MMDS

./: .pdm-python  HelloWorld.py  Pipfile  README.md  log.txt  nb1_sparkconfig.ipynb  pyproject.toml  requirements.txt
01-sparkconfig/: err.txt  nb1_sparkconfig.ipynb
Parcial 1 Práctico TF-IDF/: parcial1_practico.ipynb
Parcial 1 Práctico archivos adjuntos 2 de marzo de 2024 1332/: Solve.ipynb
Parcial 2 Práctico clustering/: Clustering.ipynb  solve.ipynb
homework/: k-means-MR-pyspark.ipynb  k-means-MR.ipynb
