[project]
name = "MMDS"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Camilovelez1", email = "camilo95022@gmail.com"},
]
dependencies = [
    "notebook~=7.1.0",
    "pyspark~=3.5.0",
    "import-java~=0.6",
    "numpy~=1.26.4",
    "pandas~=2.2.1",
    "matplotlib~=3.8.3",
    "scikit-learn~=1.4.1.post1",
    "pydrive~=1.3.1",
    "nltk~=3.8.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = false
name = "pip_conf_index_global"

[tool.pdm.dev-dependencies]
dev = []
